--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-header-buttons": "^7.0.2",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
   "devDependencies": {
